monitoring/config/base/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.loki"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
